view individual names when you hover on an incident box. • issue: LONG load time !!
the visualisation takes dozens-of-seconds to start-up, because the setup function takes too long to complete.

--- a/style.css
+++ b/style.css
@@ -20,3 +20,17 @@ body {
 	background-color:red;
 	transition: background-color .15s;
 }
+
+.popup {
+	position: absolute;
+	background: black;
+	font-size: 0.67rem;
+	line-height: .85rem;
+	color: white;
+	padding: 1rem;
+	margin-top: 1px;
+	max-width: 15rem;
+}
+.popup span.red {
+	color:red;
+}
